# ppipe

./: Cargo.toml  README.md
example/: ppipe_example.rs
examples/: ppipe_example.rs
src/: lib.rs
