[package]

name = "ppipe"
version = "0.2.0"
authors = ["Michael J Welsh <michael.welsh.j@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/MichaelJWelsh/ppipe.git"
homepage = "https://github.com/MichaelJWelsh/ppipe"
description = """
An elegantly simple and lightweight library for making iterator pipelines concurrent and amazingly fast,
hence the name ppipe (parallel pipe).
"""
keywords = ["pipe", "pipeline", "iterator", "adaptor", "concurrent"]

